# fgng-builder

./: .gitignore  .ignore  README.md  bun.lockb  manage.py  pyproject.toml  tailwind.py
builder/: admin.py  models.py
builder/migrations/: 0001_initial.py  0002_alter_strenght_force_locked.py  0003_alter_strenght_force_locked.py  0004_alter_strenght_force_locked.py  0005_strenght_exceptional_strenght.py  0006_rename_exceptional_strenght_strenght_exceptional_and_more.py  0007_alter_strenght_id_alter_strenght_unique_together.py  0008_alter_strenght_score.py
fgng_builder/: asgi.py  settings.py  urls.py  wsgi.py
static/src/: output.css
templates/: _base.html
