[tool.poetry]
name = "fgng-builder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
django = "^4.2.7"
django-types = "^0.19.1"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
